--- a/quest_escape_room_group4.ipynb
+++ b/quest_escape_room_group4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
     "            response\n",
     "            response = str(input(\"Do you want adventure? (yes/no): \")).lower()\n",
     "            \n",
-    "    print (\"welcome to the hell\")\n",
+    "    print (\"welcome to hell\")\n",
     "    play_level(game_state[\"current_level\"])\n",
     "\n",
     "def play_level(level): #kranta\n",
@@ -214,16 +214,31 @@
     "#     \"\"\"\n",
     "#     items = [i[\"name\"] for i in object_relations[level[\"name\"]]]\n",
     "#     print(\"You explore the level. This is \" + level[\"name\"] + \". You find \" + \", \".join(items))\n",
+    "    \n",
+    "# Go to next level function \n",
     "\n",
-    "def get_next_level_of_door(door, current_level): #michael reda\n",
+    "def move_to_next_level(tunnel, current_level):\n",
+    "    \n",
     "    \"\"\"\n",
-    "    From object_relations, find the two levels connected to the given door.\n",
-    "    Return the level that is not the current_level.\n",
+    "    From object_relations, find the two rooms connected to the given door.\n",
+    "    Return the room that is not the current_room.\n",
     "    \"\"\"\n",
-    "    connected_levels = object_relations[door[\"name\"]]\n",
+    "\n",
+    "    connected_levels = object_relations[tunnel]\n",
+    "\n",
     "    for level in connected_levels:\n",
-    "        if(not current_level == level):\n",
+    "        if current_level != level:\n",
     "            return level\n",
+    "\n",
+    "# def get_next_level_of_door(door, current_level): #michael reda\n",
+    "#     \"\"\"\n",
+    "#     From object_relations, find the two levels connected to the given door.\n",
+    "#     Return the level that is not the current_level.\n",
+    "#     \"\"\"\n",
+    "#     connected_levels = object_relations[door[\"name\"]]\n",
+    "#     for level in connected_levels:\n",
+    "#         if(not current_level == level):\n",
+    "#             return level\n",
     "\n",
     "def examine_item(item_name):\n",
     "    \"\"\"\n",
@@ -244,7 +259,7 @@
     "            output = \"You examine \" + item_name + \". \"\n",
     "            if(item[\"type\"] == \"tunnel\"):\n",
     "                have_keyfood = False\n",
-    "                for key in game_state[\"keyfood_collected\"]:\n",
+    "                for key in game_state[\"key_food_eaten\"]:\n",
     "                    if(key[\"target\"] == item):\n",
     "                        have_keyfood = True\n",
     "                if(have_keyfood):\n",
@@ -255,14 +270,14 @@
     "            else:\n",
     "                if(item in object_relations[current_level[\"name\"]] and len(object_relations[current_level[\"name\"]])>0):\n",
     "                    item_found = object_relations[current_level[\"name\"]].pop()\n",
-    "                    game_state[\"keyfood_collected\"].append(item_found)\n",
+    "                    game_state[\"key_food_eaten\"].append(item_found)\n",
     "                    output += \"You find \" + item_found[\"name\"] + \".\"\n",
-    "                    question = input(f\"You just found a {item_found[\"name\"]} . Would you like to eat it ? Enter 'yes' or 'no'\")\n",
+    "                    question = input(f\"You just found a {item_found['name']}. Would you like to eat it ? Enter 'yes' or 'no'\")\n",
     "                    if question == 'yes':\n",
     "                        if item[\"type\"] == \"toxic_food\":\n",
     "                            print(\"Oh no! you've been poisoned! You died. \")\n",
-    "                            pass\n",
-    "                        elif item[\"type\"] == \"keyfood\":\n",
+    "                            start_game()\n",
+    "                        elif item[\"type\"] == \"key_food\":\n",
     "                            print(\"You can now enter the second level with the keyfood you've eaten. \")\n",
     "                        else:\n",
     "                            print(\"Nothing happened.\")\n",
@@ -326,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -335,32 +350,44 @@
      "text": [
       "You woke up on the ground in front of big tunnel and you heard a strange voice talk to you do you want to enter the dungeon  \n",
       " Do you want adventure? \n",
-      "welcome to the hell\n",
+      "welcome to hell\n",
       "You are now in level 1\n",
       "You explore that level. \n",
       " --> This is level 1. You find mushroom, cabbage, apple, carrot, tunnel a\n",
-      "You are now in level 1\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'mushroom'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m game_state \u001b[38;5;241m=\u001b[39m INIT_GAME_STATE\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 2\u001b[0m start_game()\n",
-      "Cell \u001b[1;32mIn[31], line 23\u001b[0m, in \u001b[0;36mstart_game\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m         response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDo you want adventure? (yes/no): \u001b[39m\u001b[38;5;124m\"\u001b[39m))\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwelcome to the hell\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m play_level(game_state[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcurrent_level\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "Cell \u001b[1;32mIn[31], line 39\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     38\u001b[0m     explore_level(level)\n\u001b[1;32m---> 39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n",
-      "Cell \u001b[1;32mIn[31], line 41\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot sure what you mean. Type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[31], line 102\u001b[0m, in \u001b[0;36mexamine_item\u001b[1;34m(item_name)\u001b[0m\n\u001b[0;32m    100\u001b[0m         output \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou can\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt enter yet since you haven\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt eaten the keyfood.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    101\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 102\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m(item \u001b[38;5;129;01min\u001b[39;00m object_relations[current_level[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m]] \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(object_relations[item[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m]])\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m    103\u001b[0m         item_found \u001b[38;5;241m=\u001b[39m object_relations[item[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m]]\u001b[38;5;241m.\u001b[39mpop()\n\u001b[0;32m    104\u001b[0m         game_state[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkeyfood_collected\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(item_found)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'mushroom'"
+      "You are now in level 1\n",
+      "Oh no! you've been poisoned! You died. \n",
+      "You woke up on the ground in front of big tunnel and you heard a strange voice talk to you do you want to enter the dungeon  \n",
+      " Do you want adventure? \n",
+      "welcome to hell\n",
+      "You are now in level 1\n",
+      "You explore that level. \n",
+      " --> This is level 1. You find mushroom, cabbage, apple, carrot\n",
+      "You are now in level 1\n",
+      "You can now enter the second level with the keyfood you've eaten. \n",
+      "You examine cabbage. You find carrot.\n",
+      "You explore that level. \n",
+      " --> This is level 1. You find mushroom, cabbage, apple\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "You examine mushroom. You find tunnel a.\n",
+      "You explore that level. \n",
+      " --> This is level 1. You find mushroom, cabbage, apple\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "game_state = INIT_GAME_STATE.copy()\n",
-    "start_game()\n"
+    "start_game()"
    ]
   }
  ],
