--- a/quest_escape_room_group4 (ver2).ipynb
+++ b/quest_escape_room_group4 (ver2).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -372,64 +372,17 @@
       " Do you want adventure? \n",
       "Welcome to hell!\n",
       "You are now in level 1\n",
-      "You explore that level. \n",
-      " --> This is level 1. You find mushroom, cabbage, apple, carrot, tunnel a\n",
-      "You are now in level 1\n",
       "Oh no! you've been poisoned! You died. \n",
       "\n",
       "\n",
       "\n",
       "You woke up on the ground in front of big tunnel and you heard a strange voice talk to you do you want to enter the dungeon  \n",
       " Do you want adventure? \n",
-      "Welcome to hell!\n",
-      "You are now in level 1\n",
-      "You explore that level. \n",
-      " --> This is level 1. You find cabbage, apple, carrot, tunnel a\n",
-      "You are now in level 1\n",
-      "Not sure what you mean. Type 'explore' or 'examine'.\n",
-      "You are now in level 1\n",
-      "You explore that level. \n",
-      " --> This is level 1. You find cabbage, apple, carrot, tunnel a\n",
-      "You are now in level 1\n",
-      "Not sure what you mean. Type 'explore' or 'examine'.\n",
-      "You are now in level 1\n",
-      "Nothing happened.\n",
-      "You examine apple. You find apple.\n",
-      "You are now in level 1\n",
-      "Nothing happened.\n",
-      "You examine carrot. You find carrot.\n",
-      "You are now in level 1\n",
-      "You can now enter the second level with the keyfood you've eaten. \n",
-      "You examine cabbage. You find cabbage.\n",
-      "You are now in level 1\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m game_state \u001b[38;5;241m=\u001b[39m INIT_GAME_STATE\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[1;32m----> 2\u001b[0m start_game()\n",
-      "Cell \u001b[1;32mIn[6], line 23\u001b[0m, in \u001b[0;36mstart_game\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m         response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDo you want adventure? (yes/no): \u001b[39m\u001b[38;5;124m\"\u001b[39m))\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWelcome to hell!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m play_level(game_state[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcurrent_level\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "Cell \u001b[1;32mIn[6], line 39\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     38\u001b[0m     explore_level(level)\n\u001b[1;32m---> 39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n",
-      "Cell \u001b[1;32mIn[6], line 41\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot sure what you mean. Type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[6], line 139\u001b[0m, in \u001b[0;36mexamine_item\u001b[1;34m(item_name)\u001b[0m\n\u001b[0;32m    136\u001b[0m     img\u001b[38;5;241m.\u001b[39mshow()\n\u001b[0;32m    138\u001b[0m     line_break()\n\u001b[1;32m--> 139\u001b[0m     start_game()\n\u001b[0;32m    140\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m item[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtype\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkey_food\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m    141\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYou can now enter the second level with the keyfood you\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mve eaten. \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[6], line 23\u001b[0m, in \u001b[0;36mstart_game\u001b[1;34m()\u001b[0m\n\u001b[0;32m     20\u001b[0m         response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDo you want adventure? (yes/no): \u001b[39m\u001b[38;5;124m\"\u001b[39m))\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWelcome to hell!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m play_level(game_state[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcurrent_level\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "Cell \u001b[1;32mIn[6], line 39\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     38\u001b[0m     explore_level(level)\n\u001b[1;32m---> 39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n",
-      "Cell \u001b[1;32mIn[6], line 44\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot sure what you mean. Type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 44\u001b[0m     play_level(level)\n\u001b[0;32m     45\u001b[0m line_break()\n",
-      "Cell \u001b[1;32mIn[6], line 39\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     38\u001b[0m     explore_level(level)\n\u001b[1;32m---> 39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m     41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n",
-      "Cell \u001b[1;32mIn[6], line 44\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot sure what you mean. Type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 44\u001b[0m     play_level(level)\n\u001b[0;32m     45\u001b[0m line_break()\n",
-      "Cell \u001b[1;32mIn[6], line 41\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot sure what you mean. Type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[6], line 151\u001b[0m, in \u001b[0;36mexamine_item\u001b[1;34m(item_name)\u001b[0m\n\u001b[0;32m    149\u001b[0m     play_level(next_level)\n\u001b[0;32m    150\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 151\u001b[0m     play_level(current_level)\n",
-      "Cell \u001b[1;32mIn[6], line 41\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot sure what you mean. Type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[6], line 151\u001b[0m, in \u001b[0;36mexamine_item\u001b[1;34m(item_name)\u001b[0m\n\u001b[0;32m    149\u001b[0m     play_level(next_level)\n\u001b[0;32m    150\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 151\u001b[0m     play_level(current_level)\n",
-      "Cell \u001b[1;32mIn[6], line 41\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot sure what you mean. Type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[6], line 151\u001b[0m, in \u001b[0;36mexamine_item\u001b[1;34m(item_name)\u001b[0m\n\u001b[0;32m    149\u001b[0m     play_level(next_level)\n\u001b[0;32m    150\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 151\u001b[0m     play_level(current_level)\n",
-      "Cell \u001b[1;32mIn[6], line 41\u001b[0m, in \u001b[0;36mplay_level\u001b[1;34m(level)\u001b[0m\n\u001b[0;32m     39\u001b[0m     play_level(level)\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m intended_action \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 41\u001b[0m     examine_item(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat would you like to examine?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mstrip())\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNot sure what you mean. Type \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexplore\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m or \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexamine\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[6], line 115\u001b[0m, in \u001b[0;36mexamine_item\u001b[1;34m(item_name)\u001b[0m\n\u001b[0;32m    113\u001b[0m have_keyfood \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m    114\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m game_state[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkey_food_eaten\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m--> 115\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m(key[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtarget\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m item):\n\u001b[0;32m    116\u001b[0m         have_keyfood \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    117\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m(have_keyfood):\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+      "You can only answer yes or no!\n",
+      "You can only answer yes or no!\n",
+      "You can only answer yes or no!\n",
+      "You can only answer yes or no!\n",
+      "You can only answer yes or no!\n"
      ]
     }
    ],
